--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Word Game</h1>
+    <h1>Собери 10 слов из представленного ниже, за каждую букву получи одно очко</h1>
     <p>Base word: <strong>синхофазатрон</strong></p>
 
     <form id="wordForm">
