--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
+  <div class="top-left">Created by Oleg Shvetsov</div>
     <h1>Собери 10 слов из ниже приведённого слова, получи за каждую букву одно очко</h1>
     <p>Базовое слово: <strong>синхофазатрон</strong></p>
 
@@ -24,7 +24,11 @@
     <h2>Общий счёт: <span id="totalScore">0</span></h2>
     <h2>Рекорд: <span id="highScore">0</span></h2>
   </div>
-
   <script src="script.js"></script>
+  <div class="bottom-right">
+  <img src="cognilink-logo.png" alt="CogniLink Logo" />
+  <div class="logo-text">CogniLink</div>
+  <div class="motivation">Train your brain — it's your greatest asset.</div>
+</div>
 </body>
 </html>
