--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
   <script src="script.js"></script>
   <div class="bottom-right">
-  <img src="cognilink-logo.png" alt="CogniLink Logo" />
+  <img src="Снимок.JPG" alt="CogniLink Logo" />
   <div class="logo-text">CogniLink</div>
   <div class="motivation">Train your brain — it's your greatest asset.</div>
 </div>
