--- a/index.html
+++ b/index.html
@@ -37,5 +37,12 @@
   <div class="logo-text">CogniLink</div>
   <div class="motivation">Train your brain — it's your greatest asset.</div>
 </div>
+  <div class="bottom-right">
+  <img src="Снимок.JPG" alt="CogniLink Logo" />
+  <div class="logo-text">Training your brain is your biggest asset</div>
+  <div class="signature">Created by Oleg Shvetsov</div>
+  <div class="powered">Improved by CogniLink Ltd.</div>
+</div>
+
 </body>
 </html>
