--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <img src="Снимок.JPG" alt="CogniLink Logo" />
   <div class="logo-text">Training your brain is your biggest asset</div>
   <div class="signature">Created by Oleg Shvetsov</div>
-  <div class="powered">Improved by CogniLink Ltd.</div>
+  <div class="powered">Impowered by CogniLink Ltd.</div>
 </div>
 
 </body>
