--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   <script src="script.js"></script>
   <div class="bottom-right">
-  <img src="Снимок.JPG" alt="CogniLink Logo" />
+  <img src="Снимок.JPG" alt="CogniLink Logo" style="width: 200px; border-radius: 16px; display: block; margin-left: auto;" />
   <div class="logo-text">Training your brain is your biggest asset</div>
   <div class="signature">Created by Oleg Shvetsov</div>
   <div class="powered">Impowered by CogniLink Ltd.</div>
